--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,18 @@
-<h1>Message board homepage</h1>
-<ul>
-  {% for post in post_list %}
-  <li>{{ post.text }}</li>
-  {% endfor %}
-</ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Estilo Elegante</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+</head>
+<body>
+    <div class="container">
+    <h1>Message board homepage</h1>
+    <ul>
+      {% for post in post_list %}
+      <li>{{ post.text }}</li>
+      {% endfor %}
+    </ul>
+    </div>
+</body>
